# Kafwatch

./: ComposeGenerator.py  Dockerfile  NetworkScanner.py  README.md  capture_test.py  codigonetwok_IP.py  docker-compose.cams.yml  docker-compose.yml  kafka_consume_teste.py  kafka_consumer_C.py  kafka_consumer_teste.py  kafka_producer_teste.py  mediamtx.yml  requirements.txt  teste.py  teste1.py
docker_files/: Dockerfile  docker-compose.yml  mediamtx.yml
docker_manager/: ComposeGenerator.py  ComposeManager.py  FileSystemWriter.py
docker_manager/templates/: Dockerfile.template  pyproject.toml.template
kafka/: docker-compose.yml
network/: teste_scapy.py
rtsp-proxy/: docker-compose.yml
worker_build/: Dockerfile  pyproject.toml
worker_build/kafwatch_worker/: capture.py
