[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kafwatch-worker"
version = "0.1.0"
dependencies = [
    # Coloque suas dependências aqui
    "opencv-python",
    "python-dotenv",
    "kafka-python",
    "numpy"
]

[project.scripts]
kafwatch-run = "kafwatch_worker.capture:main" 